# m1-dashboard

./: AUTHORS  ChangeLog  README.md  setup.cfg
m1dashboard/dashboards/project/m1rating/: panel.py  urls.py  views.py
m1dashboard/dashboards/project/m1rating/templates/m1rating/: index.html
m1dashboard/dashboards/project/m1reporting/templates/reporting/: this_month.html
m1dashboard/enabled/: _100_project_group.py  _110_project_m1rating_panel.py  _120_project_m1reporting_panel.py
